--- a/src/ui/generator/bower.json
+++ b/src/ui/generator/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "Materialize": "materialize#~0.97.0",
     "hammerjs": "~2.0.4",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "jquery.i18n": "https://github.com/wikimedia/jquery.i18n.git"
   }
 }
