--- a/package.json
+++ b/package.json
@@ -42,12 +42,13 @@
     "raml-to-webservice": "bin/raml-to-webservice.js"
   },
   "devDependencies": {
-    "bluebird": "^2.9.13",
     "browser-sync": "^2.2.1",
     "browserify": "^8.0.2",
-    "gulp": "^3.8.8",
+    "del": "^2.0.2",
+    "gulp": "^3.9.0",
     "gulp-browserify": "^0.5.1",
     "gulp-connect": "^2.2.0",
+    "gulp-copy": "0.0.2",
     "gulp-electron": "0.0.9",
     "gulp-jshint": "^1.8.4",
     "gulp-notify": "^2.2.0",
@@ -58,14 +59,15 @@
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.1",
     "json-schema": "^0.2.2",
-    "mkdirp": "^0.5.0",
     "pre-commit": "^1.0.4",
-    "require-dir": "^0.1.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
-    "yargs": "^3.0.4"
+    "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
+    "require-dir": "^0.1.0",
+    "mkdirp": "^0.5.0",
+    "bluebird": "^2.9.13",
+    "yargs": "^3.0.4",
     "folderify": "^0.6.0",
     "gulp-atom-electron": "^0.17.2",
     "include-folder": "^0.7.0",
