--- a/package.json
+++ b/package.json
@@ -61,17 +61,18 @@
     "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
-    "require-dir": "^0.1.0",
-    "mkdirp": "^0.5.0",
     "bluebird": "^2.9.13",
-    "yargs": "^3.0.4",
+    "browserify": "^8.1.3",
     "folderify": "^0.6.0",
     "gulp-atom-electron": "^0.17.2",
     "include-folder": "^0.7.0",
+    "json-schema-converter": "0.0.4",
+    "mkdirp": "^0.5.0",
     "raml-parser": "git+https://github.com/jerson/raml-js-parser.git",
+    "require-dir": "^0.1.0",
     "string": "^3.0.0",
     "sugar": "^1.4.1",
     "swig": "^1.4.2",
-    "json-schema-converter": "0.0.4"
+    "yargs": "^3.0.4"
   }
 }
